# oppt_movo_grasp

./: README.md  movo_install.sh  planner_install.sh
movo/popcorn_grasper/: CMakeLists.txt  package.xml  setup.py
movo/popcorn_grasper/config/: grasper.rviz
movo/popcorn_grasper/launch/: demo.launch  grasp_estimator.launch  rviz.launch
movo/popcorn_grasper/scripts/: grasp_estimator.py  init_demo_pose.py
movo/popcorn_oppt_ros_interface_msgs/: CMakeLists.txt  package.xml
movo/popcorn_oppt_ros_interface_msgs/action/: OPPTPlan.action
movo/popcorn_oppt_ros_interface_msgs/msg/: OPPTObservation.msg
movo/popcorn_vision_msgs/: CMakeLists.txt  README.md  package.xml
movo/popcorn_vision_msgs/action/: GetCandyHeight.action  TabletopObjectLocalization.action
planner/popcorn_oppt_ros_interface/: CMakeLists.txt  package.xml
planner/popcorn_oppt_ros_interface/cmake/: AddSolverSource.cmake  CheckIKSupport.cmake  FindGazebo.cmake
planner/popcorn_oppt_ros_interface/include/: ActionReceiver.hpp  BeliefUpdater.hpp  StateMachine.hpp  popcorn_oppt_ros_interface.hpp
planner/popcorn_oppt_ros_interface/launch/: planner.launch
planner/popcorn_oppt_ros_interface/src/: MachineState.cpp  popcorn_oppt_ros_interface.cpp
planner/popcorn_oppt_ros_interface/src/MovoModels/MovoGraspingEnvironment/: MovoGraspingEnvironment.sdf  model.config
planner/popcorn_oppt_ros_interface/src/MovoModels/MovoRobot/movo_description/urdf/: movo_test.urdf
planner/popcorn_oppt_ros_interface/src/MovoModels/MovoSevenDOF/: MovoSevenDOF.sdf  MovoTwo7dof.urdf  model.config
planner/popcorn_oppt_ros_interface/src/MovoPlugins/: CMakeLists.txt
planner/popcorn_oppt_ros_interface/src/MovoPlugins/heuristicPlugins/MovoGraspingHeuristicPlugin/: CMakeLists.txt  MovoGraspingHeuristicOptions.hpp  MovoGraspingHeuristicPlugin.cpp
planner/popcorn_oppt_ros_interface/src/MovoPlugins/initialBeliefPlugins/MovoGraspingInitialBeliefPlugin/: CMakeLists.txt  MovoGraspingInitialBeliefOptions.hpp  MovoGraspingInitialBeliefPlugin.cpp
planner/popcorn_oppt_ros_interface/src/MovoPlugins/observationPlugins/MovoGraspingObservationPlugin/: CMakeLists.txt  MovoGraspingObservationPlugin.cpp  MovoGraspingObservationPluginOptions.hpp
planner/popcorn_oppt_ros_interface/src/MovoPlugins/rewardPlugins/MovoGraspingRewardPlugin/: CMakeLists.txt  MovoGraspingRewardOptions.hpp  MovoGraspingRewardPlugin.cpp
planner/popcorn_oppt_ros_interface/src/MovoPlugins/script/: setup.sh
planner/popcorn_oppt_ros_interface/src/MovoPlugins/shared/: MovoAction.hpp  MovoGraspingObservation.hpp  MovoGraspingTransitionOptions.hpp  MovoUserData.hpp  MovoUtils.hpp
planner/popcorn_oppt_ros_interface/src/MovoPlugins/terminalPlugins/MovoGraspingTerminalPlugin/: CMakeLists.txt  MovoGraspingTerminalOptions.hpp  MovoGraspingTerminalPlugin.cpp
planner/popcorn_oppt_ros_interface/src/MovoPlugins/transitionPlugins/MovoGraspingTransitionPlugin/: CMakeLists.txt  MovoGraspingActionSpaceDiscretizer.hpp  MovoGraspingTransitionPlugin.cpp
planner/popcorn_oppt_ros_interface/src/cfg/: MovoDemo.cfg
planner/popcorn_oppt_ros_interface/src/solvers/ABT/: solverABT.hpp
planner/popcorn_oppt_ros_interface/src/solvers/ABT/robotModel/: ActionPool.hpp  ModelWithProgramOptions.hpp  RobotAction.hpp  RobotModel.cpp  RobotModel.hpp  RobotObservation.hpp  RobotSerializer.hpp  RobotState.hpp  RobotTextSerializer.cpp  RobotTextSerializer.hpp  RobotTransitionParameters.hpp  generateABTPolicy.hpp  parsers.cpp  parsers.hpp  position_history.cpp  position_history.hpp
planner/popcorn_oppt_ros_interface/src/solvers/ABT/robotModel/abtSimulator/: ABTSimulator.cpp  ABTSimulator.hpp
planner/popcorn_oppt_ros_interface/src/solvers/ABT/robotModel/belief/: BeliefNode.cpp  BeliefNode.hpp  BeliefTree.hpp
planner/popcorn_oppt_ros_interface/src/solvers/ABT/robotModel/changes/: GenericModelChange.hpp
planner/popcorn_oppt_ros_interface/src/solvers/ABT/robotModel/mappings/: approximateObservations.cpp  approximateObservations.hpp  enumeratedObservations.cpp  enumeratedObservations.hpp
planner/popcorn_oppt_ros_interface/src/solvers/ABT/robotModel/solver/: Histories.hpp  HistoryEntry.cpp  HistoryEntry.hpp  HistorySequence.hpp  Solver.cpp  Solver.hpp  StateInfo.hpp  StatePool.cpp  StatePool.hpp
planner/popcorn_oppt_ros_interface/src/solvers/ABT/robotModel/stepper/: Gps2StepGenerator.hpp
planner/popcorn_oppt_ros_interface/src/solvers/ABT/robotModel/treeInspector/: TreeInspector.cpp  TreeInspector.hpp
planner/popcorn_oppt_ros_interface/src/solvers/ABT/solver/: ActionNode.hpp  Agent.hpp  BeliefNode.hpp  BeliefTree.hpp  HistoryEntry.cpp  HistoryEntry.hpp  HistorySequence.hpp  Simulator.cpp  Simulator.hpp  Solver.cpp  Solver.hpp  cached_values.hpp
planner/popcorn_oppt_ros_interface/src/solvers/ABT/solver/abstract-problem/: Action.hpp  DiscretizedPoint.hpp  HistoricalData.hpp  Model.cpp  Model.hpp  Observation.hpp  State.hpp  Vector.hpp
planner/popcorn_oppt_ros_interface/src/solvers/ABT/solver/abstract-problem/heuristics/: HeuristicFunction.hpp  RolloutHeuristic.cpp  RolloutHeuristic.hpp
planner/popcorn_oppt_ros_interface/src/solvers/ABT/solver/belief-estimators/: estimators.cpp
planner/popcorn_oppt_ros_interface/src/solvers/ABT/solver/changes/: DefaultHistoryCorrector.cpp  DefaultHistoryCorrector.hpp  HistoryCorrector.hpp
planner/popcorn_oppt_ros_interface/src/solvers/ABT/solver/indexing/: FlaggingVisitor.cpp  FlaggingVisitor.hpp  RTree.cpp  SpatialIndexVisitor.cpp
planner/popcorn_oppt_ros_interface/src/solvers/ABT/solver/mappings/actions/: ActionMapping.hpp  ActionMappingEntry.hpp  ActionPool.hpp  continuous_actions.cpp  continuous_actions.hpp  (+3 more)
planner/popcorn_oppt_ros_interface/src/solvers/ABT/solver/search/: MultipleStrategiesExp3.cpp  search_interface.cpp  search_interface.hpp
planner/popcorn_oppt_ros_interface/src/solvers/ABT/solver/serialization/: Serializer.hpp  TextSerializer.cpp  TextSerializer.hpp
planner/popcorn_oppt_ros_interface/src/solvers/MultithreadedABT/: CMakeLists.txt  MultithreadedABTOptions.hpp  PreFilterWorker.hpp  main_abt.cpp  solverABTMultithreaded.hpp
(+135 files in other folders)
